# homework

./: .env.example  README.md  pyproject.toml
dz/: db.json
dz/config/: asgi.py  settings.py  urls.py  wsgi.py
dz/stocks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
dz/stocks/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_code_and_more.py  0003_alter_product_code.py  0004_remove_productstock_product_productstock_product.py  0005_rename_warehouse_stock_and_more.py
dz/stocks/services/: product.py  product_stock.py  stock.py
